@@ -2,3 +2,4 @@ usr/share/app-info/xmls
 usr/share/gnome-software/
 usr/share/icons/
 usr/share/locale/
+debian/source_gnome-software.py /usr/share/apport/package-hooks
